Fix navbar on small devices

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2118,12 +2118,6 @@ body.is-touch {
       ($size-wrapper-pad-tb - _size(element-margin)) $size-wrapper-pad-lr;
   }
 
-  /* Header */
-
-  #header {
-    display: none;
-  }
-
   /* Banner */
 
   #banner {
@@ -2157,7 +2151,6 @@ body.is-touch {
     @include vendor("backface-visibility", "hidden");
     @include vendor("transition", "transform #{_duration(navPanel)} ease");
     padding-bottom: 1px;
-    padding-top: 44px !important;
   }
 
   #titleBar {
